fixed alignment on mobile

--- a/src/components/videos/vid-player.css
+++ b/src/components/videos/vid-player.css
@@ -164,6 +164,7 @@ input[type="range"]::-moz-range-track {
   .video-player-wrapper {
     padding: 0.75rem;
     align-items: center;
+    justify-content: center;
   }
 
   .controls-container {
